added JAVA_OPTS for windows version of doctoolchain script